<resources>
    <string name="app_name">Easy Clean</string>
    <string name="google_maps_key">AIzaSyDRCRVWK-b6DSAEkZYB2wEKVBO3GRNL3v8</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="link_login">Sudah punya akun? Masuk saja</string>
    <string name="link_register">Belum punya akun? Daftar disini</string>
    <string name="register">Daftar</string>
    <string name="password">Password</string>
    <string name="repassword">Ulangi Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="easy_clean">Easy Clean</string>
    <string name="handphone">Handphone</string>
    <string name="continuetext">Continue</string>
    <string name="login">Masuk</string>
    <string name="logo">Logo</string>
    <string name="logout">Logout</string>
    <string name="new_ways">NEW WAYS</string>
    <string name="of">OF</string>
    <string name="doing">DOING</string>
    <string name="laundry">LAUNDRY</string>
    <string name="order_now">ORDER NOW</string>
    <string name="service_type">Service Type</string>
    <string name="regular">Regular</string>
    <string name="regular_days">3 Days</string>
    <string name="express">Express</string>
    <string name="express_days">1 Days</string>
    <string name="decreaseIcon">-</string>
    <string name="increaseIcon">+</string>
    <string name="zero">0</string>
    <string name="laundry_bag">Laundry Bag (6kg)</string>
    <string name="bed_cover">Bed Cover</string>
    <string name="bed_sheet">Bed Sheet</string>
    <string name="total">Total</string>
    <string name="total_currency">IDR </string>
    <string name="back">BACK</string>
    <string name="next">NEXT</string>
    <string name="confirm">CONFIRM</string>
    <string name="address">Address</string>
    <string name="pick_up">Pick Up</string>
    <string name="delivery">Delivery</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="service">Service</string>
    <string name="service_list">Service List</string>
</resources>
