<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.easyclean.easyclean.OrderActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:fontFamily="@font/comfortaa_font"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@color/textColor"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="14dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingEnd="16dp"
        android:paddingStart="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa_font"
            android:text="@string/address"
            android:textColor="@color/textColor"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/text_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa_font"
            android:text="@string/address"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/comfortaa_font"
                    android:text="@string/pick_up"
                    android:textColor="@color/textColor"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/text_pick_up_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/comfortaa_font"
                    android:text="@string/date"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/text_pick_up_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/comfortaa_font"
                    android:text="@string/time"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/comfortaa_font"
                    android:text="@string/delivery"
                    android:textColor="@color/textColor"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/text_delivery_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/comfortaa_font"
                    android:text="@string/date"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/text_delivery_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/comfortaa_font"
                    android:text="@string/time"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa_font"
            android:text="@string/service"
            android:textColor="@color/textColor"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/text_service_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa_font"
            android:text="@string/service_type"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_service_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa_font"
            android:text="@string/service_list"
            android:textSize="18sp" />


    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimaryDark"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:fontFamily="@font/comfortaa_font"
            android:text="@string/total"
            android:textColor="@color/textColor"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/text_total"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/comfortaa_font"
            android:text="@string/total_currency"
            android:textColor="@color/textColor"
            android:textSize="24sp"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/text_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/comfortaa_font"
            android:text="@string/zero"
            android:textColor="@color/textColor"
            android:textSize="24sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp">
        <Button
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:background="@drawable/roundedbutton"
            android:paddingEnd="12dp"
            android:paddingStart="12dp"
            android:text="@string/back"
            android:onClick="onClick"
            android:fontFamily="@font/comfortaa_font"
            android:textColor="@android:color/white"/>
        <Button
            android:id="@+id/button_confirm"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/roundedbutton"
            android:paddingEnd="12dp"
            android:paddingStart="12dp"
            android:text="@string/confirm"
            android:onClick="onClick"
            android:fontFamily="@font/comfortaa_font"
            android:textColor="@android:color/white"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

</LinearLayout>
