<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.easyclean.easyclean.OrderActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:fontFamily="@font/comfortaa_font"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@color/textColor"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="16dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/service_type"
            android:textColor="@color/textColor"
            android:textSize="30sp"
            android:padding="8dp"
            android:fontFamily="@font/comfortaa_font"
            android:gravity="center"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:checkedButton="@id/radio_regular">

            <RadioButton
                android:id="@+id/radio_regular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onRadioButtonClicked"
                android:text="@string/regular"
                android:textColor="@color/textColor" />

            <RadioButton
                android:id="@+id/radio_express"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onRadioButtonClicked"
                android:text="@string/express"
                android:textColor="@color/textColor" />
        </RadioGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="13dp"
                android:text="@string/regular_days"
                tools:ignore="RtlSymmetry" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="13dp"
                android:text="@string/express_days"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="8dp"
            android:background="@color/colorPrimaryDark"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <CheckBox
                android:id="@+id/checkBox_laundryBag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:fontFamily="@font/comfortaa_font"
                android:onClick="onCheckboxClicked"
                android:text="@string/laundry_bag"
                android:textColor="@color/textColor"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/decrease_laundryBag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaa_font"
                android:onClick="onClick"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:text="@string/decreaseIcon"
                android:textColor="@color/textColor"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/count_laundryBag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaa_font"
                android:text="@string/zero"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/increase_laundryBag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaa_font"
                android:onClick="onClick"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:text="@string/increaseIcon"
                android:textColor="@color/textColor"
                android:textSize="40sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <CheckBox
                android:id="@+id/checkBox_bedSheet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:fontFamily="@font/comfortaa_font"
                android:onClick="onCheckboxClicked"
                android:text="@string/bed_sheet"
                android:textColor="@color/textColor"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/decrease_bedSheet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaa_font"
                android:onClick="onClick"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:text="@string/decreaseIcon"
                android:textColor="@color/textColor"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/count_bedSheet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaa_font"
                android:text="@string/zero"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/increase_bedSheet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaa_font"
                android:onClick="onClick"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:text="@string/increaseIcon"
                android:textColor="@color/textColor"
                android:textSize="40sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <CheckBox
                android:id="@+id/checkBox_bedCover"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:fontFamily="@font/comfortaa_font"
                android:onClick="onCheckboxClicked"
                android:text="@string/bed_cover"
                android:textColor="@color/textColor"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/decrease_bedCover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaa_font"
                android:onClick="onClick"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:text="@string/decreaseIcon"
                android:textColor="@color/textColor"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/count_bedCover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaa_font"
                android:text="@string/zero"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/increase_bedCover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaa_font"
                android:onClick="onClick"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:text="@string/increaseIcon"
                android:textColor="@color/textColor"
                android:textSize="40sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="8dp"
            android:background="@color/colorPrimaryDark"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/total"
                android:textColor="@color/textColor"
                android:fontFamily="@font/comfortaa_font"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/total_currency"
                android:textColor="@color/textColorDark"
                android:fontFamily="@font/comfortaa_font"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textColor="@color/textColorDark"
                android:fontFamily="@font/comfortaa_font"
                android:textSize="20sp"/>
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp">
        <Button
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:background="@drawable/roundedbutton"
            android:paddingEnd="12dp"
            android:paddingStart="12dp"
            android:text="@string/back"
            android:onClick="onClick"
            android:fontFamily="@font/comfortaa_font"
            android:textColor="@android:color/white"/>
        <Button
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/roundedbutton"
            android:paddingEnd="12dp"
            android:paddingStart="12dp"
            android:text="@string/next"
            android:onClick="onClick"
            android:fontFamily="@font/comfortaa_font"
            android:textColor="@android:color/white"/>
    </RelativeLayout>

</LinearLayout>
