<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.easyclean.easyclean.ProfileActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:fontFamily="@font/comfortaa_font"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@color/textColor"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        android:paddingEnd="24dp"
        android:paddingStart="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa_font"
            android:text="@string/name"
            android:textColor="@color/textColor"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa_font"
            android:text="@string/email"
            android:textColor="@color/textColor"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa_font"
            android:text="@string/handphone"
            android:textColor="@color/textColor"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/input_handphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_continue"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:background="@drawable/roundedbutton"
                android:fontFamily="@font/comfortaa_font"
                android:onClick="onClick"
                android:paddingEnd="24dp"
                android:paddingStart="24dp"
                android:text="@string/continuetext"
                android:textColor="@android:color/white" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>
